Changed my photo to b&w aesthetic

--- a/About.css
+++ b/About.css
@@ -116,10 +116,12 @@
   }
 
   .u-section-1 .u-btn-2 {
+    margin-top: 20px;
     margin-left: 348px;
   }
 
   .u-section-1 .u-btn-3 {
+    margin-top: 20px;
     margin-left: 334px;
   }
 }
